- Fix invisible style - Change css classname: add prefix and change some selectors

--- a/src/css/checkbox.css
+++ b/src/css/checkbox.css
@@ -1,5 +1,5 @@
-input[type=checkbox]:not([disabled]),
-input[type=checkbox]:not([disabled]) + label {
+.etk-checkbox:not([disabled]),
+.etk-checkbox:not([disabled]) + label {
 	cursor: pointer;
 }
 
@@ -7,10 +7,10 @@ input[type=checkbox]:not([disabled]) + label {
  * Saf3+, Chrome1+
  */
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
-	input[type=checkbox].etk-checkbox {
+	.etk-checkbox {
 		visibility: hidden;
 	}
-	input[type=checkbox].etk-checkbox:not(.invisible):after {
+	.etk-checkbox:not(.etk-invisible):after {
 		visibility: visible;
 		box-sizing: border-box;
 		width: 14px;
@@ -22,37 +22,37 @@ input[type=checkbox]:not([disabled]) + label {
 		color: transparent;
 		content: "";
 	}
-	input[type=checkbox].etk-checkbox:checked:after {
+	.etk-checkbox:checked:after {
 		font-size: 12px;
 		text-align: center;
 		content: "\2713";
 	}
-	input[type=checkbox].etk-checkbox.partial-checked:not(:checked):after {
+	.etk-checkbox.etk-checkbox-partial:not(:checked):after {
 		font-size: 10px;
 		text-indent: 4px;
 		content: "\25A0";
 	}
-	input[type=checkbox].etk-checkbox + * {
+	.etk-checkbox + * {
 		margin-left: 5px;
 	}
-	input[type=checkbox].etk-checkbox:checked:after,
-	input[type=checkbox].etk-checkbox.partial-checked:not(:checked):after {
+	.etk-checkbox:checked:after,
+	.etk-checkbox.etk-checkbox-partial:not(:checked):after {
 		color: #FF9000;
 	}
-	input[type=checkbox].etk-checkbox:disabled:after {
+	.etk-checkbox:disabled:after {
 		opacity: .5;
 	}
 	
 	/* Chacoal Theme */
-	.chacoal input[type=checkbox].etk-checkbox:after {
+	.chacoal .etk-checkbox:after {
 		background: #313131;
 		box-shadow: 0 1px #474747, inset 0 1px 0 1px rgba(71, 71, 71, 0.2), inset 0 0 0 1px #000, inset 0 0 0 2px rgba(71, 71, 71, 0.5);
 	}
-	.chacoal input[type=checkbox].etk-checkbox:focus:after,
-	.chacoal input[type=checkbox].etk-checkbox.etk-focused:after {
+	.chacoal .etk-checkbox:focus:after,
+	.chacoal .etk-checkbox.etk-focused:after {
 		box-shadow: 0 0 0 1px #5b4a38, 0 0 1px 1px #5b4a38, 0 0 1px 0 #5b4a38, 0 1px #474747, inset 0 1px 0 1px rgba(71,71,71,0.4), inset 0 0 0 1px #000, inset 0 0 0 2px #36260c;
 	}
-	.chacoal input[type=checkbox].etk-checkbox:not([disabled]):hover:after {
+	.chacoal .etk-checkbox:not([disabled]):hover:after {
 		background: #36260c;
 	}
 }
@@ -60,11 +60,11 @@ input[type=checkbox]:not([disabled]) + label {
 /**
  *Firefox only. 1+, IE7
  */
-	input[type=checkbox].etk-checkbox,
+	.etk-checkbox,
 	x:-moz-any-link {
 		display: none;
 	}
-	input[type=checkbox].etk-checkbox + label:before,
+	.etk-checkbox:not(.etk-invisible) + label:before,
 	x:-moz-any-link {
 		box-sizing: border-box;
 		width: 14px;
@@ -77,43 +77,43 @@ input[type=checkbox]:not([disabled]) + label {
 		color: transparent;
 		content: "";
 	}
-	input[type=checkbox].etk-checkbox:checked + label:before,
+	.etk-checkbox:checked + label:before,
 	x:-moz-any-link {
 		text-align: center;
 		font-size: 12px;
 		content: "\2713";
 	}
-	input[type=checkbox].etk-checkbox.partial-checked:not(:checked) + label:before,
+	.etk-checkbox.etk-checkbox-partial:not(:checked) + label:before,
 	x:-moz-any-link {
 		font-size: 10px;
 		text-indent: 4px;
 		content: "\25A0";
 	}
-	input[type=checkbox].etk-checkbox + *,
+	.etk-checkbox + *,
 	x:-moz-any-link {
 		margin-left: 0;
 	}
-	input[type=checkbox].etk-checkbox:checked + label:before,
-	input[type=checkbox].etk-checkbox.partial-checked:not(:checked) + label:before,
+	.etk-checkbox:checked + label:before,
+	.etk-checkbox.etk-checkbox-partial:not(:checked) + label:before,
 	x:-moz-any-link {
 		color: #FF9000;
 	}
-	input[type=checkbox].etk-checkbox:disabled + label:before,
+	.etk-checkbox:disabled + label:before,
 	x:-moz-any-link {
 		opacity: .5;
 	}
 
 	/* Chacoal Theme */
-	input[type=checkbox].etk-checkbox + label:before,
+	.etk-checkbox + label:before,
 	x:-moz-any-link {
 		background: #313131;
 		box-shadow: 0 1px #474747, inset 0 1px 0 1px rgba(71, 71, 71, 0.2), inset 0 0 0 1px #000, inset 0 0 0 2px rgba(71, 71, 71, 0.5);
 	}
-	.chacoal input[type=checkbox].etk-checkbox:focus + label:before,
-	.chacoal input[type=checkbox].etk-checkbox.etk-focused + label:before {
+	.chacoal .etk-checkbox:focus + label:before,
+	.chacoal .etk-checkbox.etk-focused + label:before {
 		box-shadow: 0 0 0 1px #5b4a38, 0 0 1px 1px #5b4a38, 0 0 1px 0 #5b4a38, 0 1px #474747, inset 0 1px 0 1px rgba(71,71,71,0.4), inset 0 0 0 1px #000, inset 0 0 0 2px #36260c;
 	}
-	input[type=checkbox].etk-checkbox:not([disabled]):hover + label:before,
+	.etk-checkbox:not([disabled]):hover + label:before,
 	x:-moz-any-link {
 		background: #36260c;
 	}
@@ -122,10 +122,10 @@ input[type=checkbox]:not([disabled]) + label {
  *IE6, IE7, IE8
  */
 @media \0screen\,screen\9 {
-	input[type=checkbox].etk-checkbox {
+	.etk-checkbox {
 		display: inline-block;
 	}
-	input[type=checkbox].etk-checkbox + * {
+	.etk-checkbox + * {
 		margin-left: 5px;
 	}
 }
